[gd_scene load_steps=15 format=3 uid="uid://b2ofx0mur7joj"]

[ext_resource type="Script" uid="uid://bbixgvwh16c0" path="res://mood_assessment.gd" id="1_gk6ty"]
[ext_resource type="FontFile" uid="uid://b7qvl2gpk3y26" path="res://Fonts/Super Trend.ttf" id="2_qus3j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bnghe"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.34902, 0.219608, 0.0745098, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.160784)
shadow_size = 5
shadow_offset = Vector2(4.77, 5.29)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qus3j"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.34902, 0.219608, 0.0745098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvpsm"]
bg_color = Color(1, 0.831373, 0.172549, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 0.831373, 0.172549, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o3f1f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gk6ty"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qus3j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yvpsm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bnghe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7qd0f"]
bg_color = Color(1, 0.831373, 0.172549, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.341176, 0.207843, 0.0627451, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_gk6ty"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o3f1f"]
resource_name = "pop"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.27, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.115, 0.115), Vector2(1.025, 1.025), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0349066, 0.00872665, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333, 0.28),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qus3j"]
_data = {
&"RESET": SubResource("Animation_gk6ty"),
&"pop": SubResource("Animation_o3f1f")
}

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(195, 396)
script = ExtResource("1_gk6ty")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.0
offset_top = -129.0
offset_right = 148.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_bnghe")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="assessment_title" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.831373, 0.172549, 1)
theme_override_colors/font_outline_color = Color(0.34902, 0.219608, 0.0745098, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_qus3j")
text = "How was your experience?"

[node name="assessment_scale" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.831373, 0.172549, 1)
theme_override_colors/font_outline_color = Color(0.34902, 0.219608, 0.0745098, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_qus3j")
theme_override_font_sizes/font_size = 31
text = "ðŸ˜ž"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/slider = SubResource("StyleBoxFlat_qus3j")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_yvpsm")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_yvpsm")
max_value = 5.0
value = 1.0
rounded = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="cancel_btn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.341176, 0.207843, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_qus3j")
theme_override_font_sizes/font_size = 19
theme_override_styles/focus = SubResource("StyleBoxEmpty_o3f1f")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gk6ty")
theme_override_styles/hover = SubResource("StyleBoxEmpty_qus3j")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yvpsm")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bnghe")
text = "Close"

[node name="submit_btn" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_qus3j")
theme_override_font_sizes/font_size = 19
theme_override_styles/focus = SubResource("StyleBoxEmpty_o3f1f")
theme_override_styles/disabled = SubResource("StyleBoxFlat_7qd0f")
theme_override_styles/hover = SubResource("StyleBoxFlat_7qd0f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7qd0f")
theme_override_styles/normal = SubResource("StyleBoxFlat_7qd0f")
text = "Submit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qus3j")
}
